# SDPA

./: README.md
ILP64/: INSTALL  Makefile.am  Makefile.in  config.sample.gcc  config.sample.intel  ilasm.h  make.headers  param.sdpa  sdpa_algebra.h  sdpa_block.cpp  sdpa_call.cpp  sdpa_chordal.cpp  sdpa_chordal.h  sdpa_dataset.cpp  sdpa_dpotrf.h  sdpa_exe.cpp  sdpa_include.h  sdpa_io.cpp  sdpa_io.h  sdpa_jordan.h  sdpa_mpist.cpp  sdpa_newton.cpp  sdpa_newton.h  sdpa_parts.cpp  sdpa_solve.cpp  sdpa_struct.cpp  sdpa_struct.h  sdpa_tool.cpp  sdpa_tool.h
ILP64/autom4te.cache/: requests  traces.0
ILP64/libexample/: Makefile  example1.cpp  example3.cpp
ILP64/mex/: Makefile  SedumiToSDPA.m  gensdpafile.m  initial_point.m  mexDisAggSDPsol.cpp  mexSedumiWrap.cpp  param.m  sedumiwrap.m
ILP64/mumps/: Makefile
LP64/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  config.sample.gcc  config.sample.intel  configure  configure.in  make.inc  sdpa_algebra.h  sdpa_block.cpp  sdpa_block.h  sdpa_call.cpp  sdpa_call.h  sdpa_chordal.cpp  sdpa_dataset.cpp  sdpa_dataset.h  sdpa_dpotrf.cpp  sdpa_include.h  sdpa_io.cpp  sdpa_jordan.cpp  sdpa_linear.cpp  sdpa_linear.h  sdpa_newton.cpp  sdpa_parts.cpp  sdpa_parts.h  sdpa_right.h  sdpa_scalapack.h  sdpa_struct.cpp  sdpa_struct.h  sdpa_tool.h
LP64/autom4te.cache/: output.0  output.1  requests  traces.1
LP64/etc/: Makefile
LP64/libexample/: example2.cpp  example4.cpp  example5.cpp  example6.cpp
LP64/mex/: mexAggSDPcones.cpp  mexFprintf.c  mexsdpa.cpp  read_data.m  sdpam.m
LP64/mumps/: Makefile
